--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,9 +2,8 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs every day at midnight (you can change the timing)
-
-  workflow_dispatch: # Allows you to run this manually
+    - cron: "0 0 * * *" # Runs every day at midnight
+  workflow_dispatch: # Allows manual trigger
 
 jobs:
   build:
@@ -26,4 +25,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the built-in token
