--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -10,19 +10,24 @@ jobs:
     name: Snake Animation
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      
       - uses: Platane/snk@v3
         with:
           github_user_name: Khatwangadhareddy
           outputs: |
             dist/github-contribution-grid-snake.svg
-      - uses: actions/upload-artifact@v2
+
+      - name: Upload Snake SVG as Artifact
+        uses: actions/upload-artifact@v3
         with:
           name: snake-artifact
           path: dist
+
       - name: Push Snake Animation to GitHub
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the built-in token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
